--- a/chatdash/style1.css
+++ b/chatdash/style1.css
@@ -35,6 +35,7 @@ body {
   flex: 70%;
   height: 100vh;
   /* background: #111; */
+  background-image: url(../chatdash/assets/background\ image.jpg);
 }
 .container .right-side::before {
   content: "";
@@ -130,7 +131,8 @@ body {
 .chatlist {
   position: relative;
   height: calc(100% - 110px);
-  overflow: hidden;
+  overflow: auto;
+  overflow-y: scroll;
 }
 .chatlist .block {
   position: relative;
@@ -225,10 +227,19 @@ body {
 .my-msg {
   justify-content: flex-end;
 }
-.friend-msg {
-  justify-content: flex-start;
-}
 
+.friend-msg p{
+  justify-content: flex-start;
+  background-color:#fff;
+  color: #252424;
+  text-align: left;
+}
+.time{
+  display: block;
+  /* margin-top: px; */
+  font-size: 0.85em;
+  opacity: 0.5;
+} 
 .chat-input {
   position: relative;
   width: 100%;
@@ -282,4 +293,17 @@ body {
     border: none;
     color: #000;
     font-size: 20px;
+}
+.online1{
+  height: 10px;
+  width: 10px;
+  border-radius: 40%;
+  background: green ;
+}
+
+.offline{
+  height: 10px;
+  width: 10px;
+  border-radius: 40%;
+  background: #fff; 
 }
