--- a/register/style.css
+++ b/register/style.css
@@ -53,3 +53,26 @@
   font-size: 18px;
   font-weight: 600;
 }
+.image-container {
+  position: relative;
+  display: inline-block;
+  cursor: pointer;
+  width: 100px; /* Customize the width as needed */
+  height: 90px; /* Customize the height as needed */
+}
+
+#image {
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+}
+
+.hidden-input {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  cursor: pointer;
+}
